BUG: <br> in tables is adding too much space

--- a/static/css/jsdoc.css
+++ b/static/css/jsdoc.css
@@ -310,7 +310,7 @@ table h6 {
 }
 
 #readme br,
-.description br {
+.member > .description br {
 	margin-bottom: 5%;
 }
 
